k8s/app-manifest/j26-screens/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-screens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-screens
  template:
    metadata:
      labels:
        app: j26-screens
    spec:
      containers:
        - name: j26-screens
          image: ghcr.io/scouterna/j26-screens:latest
          ports:
            - containerPort: 80
