k8s/app-manifest/j26-screens/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j26-screens
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /_services/screens(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-screens
                port:
                  number: 80
